# lucia

./: .env.dist  CHANGELOG.md  CONTRIBUTING  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain  rustfmt.toml
lucia/: Cargo.toml
lucia-apis/: Cargo.toml  README.md
lucia-apis/src/: art_and_design.rs  blockchain.rs  error.rs  exchange.rs  gaming.rs  health.rs  lib.rs  macros.rs  misc.rs
lucia-apis/src/art_and_design/: colour_lovers.rs
lucia-apis/src/art_and_design/colour_lovers/: integration_tests.rs
lucia-apis/src/art_and_design/colour_lovers/endpoint/: colors.rs  lovers.rs  palettes.rs  patterns.rs  stats.rs
lucia-apis/src/blockchain/: aptos.rs  confirm_transaction_params.rs  ethereum.rs  solana.rs
lucia-apis/src/blockchain/aptos/: integration_tests.rs
lucia-apis/src/blockchain/aptos/pkg/: check_basic_node_health.rs
lucia-apis/src/blockchain/ethereum/: access_list_item.rs  block_id.rs  block_number.rs  call_request.rs  contract.rs  endpoint.rs  integration_tests.rs  raw_transaction.rs  receipt.rs  transaction.rs  transaction_request.rs
lucia-apis/src/blockchain/solana/: account.rs  address_lookup_table_account.rs  block.rs  endpoint.rs  filter.rs  integration_tests.rs  notification.rs  pkg.rs  program.rs  reward.rs  short_vec.rs  slot_update.rs  transaction.rs
lucia-apis/src/blockchain/solana/pkg/: aux.rs  (+59 more)
lucia-apis/src/calendar/: nager_date.rs
lucia-apis/src/calendar/nager_date/: endpoint.rs  integration_tests.rs  pkg.rs
lucia-apis/src/exchange/: ku_coin.rs
lucia-apis/src/exchange/ku_coin/: endpoint.rs  integration_tests.rs  ku_coin_credentials.rs  pkg.rs
lucia-apis/src/gaming/: age_of_empires_ii.rs
lucia-apis/src/gaming/age_of_empires_ii/: endpoint.rs  integration_tests.rs  pkg.rs
lucia-apis/src/health/: m_media_covid_19.rs
lucia-apis/src/health/m_media_covid_19/: integration_tests.rs
lucia-apis/src/misc/: concat_array_str.rs  consts.rs  one_mand_and_one_opt.rs  request_manager_wrapper.rs  slice_by_commas.rs  types.rs
lucia-apis/src/series/: rick_and_morty.rs
lucia-apis/src/series/rick_and_morty/: integration_tests.rs
lucia-apis/src/test_data/: json_placeholder.rs
lucia-apis/src/test_data/json_placeholder/: endpoint.rs  integration_tests.rs  pkg.rs
lucia-macros/: Cargo.toml  README.md
lucia-macros/src/: api_types.rs  error.rs  lib.rs  misc.rs  pkg.rs  pkg_doc.rs  transport_group.rs
lucia-macros/src/api_types/: attrs.rs
lucia-macros/src/pkg/: data_format.rs  enum_struct_or_type.rs  fir.rs  misc.rs  transport_group.rs
lucia-macros/src/pkg/fir/: fir_after_sending_item_values.rs  fir_aux_field_attr.rs  fir_aux_item_values.rs  fir_before_sending_item_values.rs  fir_custom_item_values.rs  fir_hook_item_values.rs  fir_item_attr.rs  fir_items_values.rs  fir_params_items_values.rs  fir_pkg_attr.rs  fir_req_data_item_values.rs  fir_res_data_item_values.rs
lucia-macros/src/pkg/sir/: sir_aux_item_values.rs  sir_final_values.rs  sir_pkg_attr.rs
lucia-macros/tests/: ui.rs
lucia-macros/tests/ui/error_enum/: absent_field_in_unnamed_struct.rs  absent_field_in_unnamed_struct.stderr  absent_req_or_res.rs  absent_req_or_res.stderr  abset_req_or_res.stderr  bad_after_sending.rs  bad_after_sending.stderr  bad_aux.rs  bad_aux.stderr  bad_aux_data.rs  bad_aux_data.stderr  bad_before_sending.rs  bad_before_sending.stderr  bad_field.rs  bad_field.stderr  bad_params.rs  bad_params.stderr  bad_req.rs  bad_req.stderr  bad_res.rs  bad_res.stderr  duplicated_global_pkg_attr.rs  duplicated_global_pkg_attr.stderr  duplicated_local_pkg_attr.rs  duplicated_local_pkg_attr.stderr  incorrect_json_rpc_data_format.rs  incorrect_json_rpc_data_format.stderr  mandatory_outer_attrs_are_not_present.rs  mandatory_outer_attrs_are_not_present.stderr  no_enum_struct_or_type.rs  no_enum_struct_or_type.stderr  responses_can_not_have_type_params.rs  responses_can_not_have_type_params.stderr  unknown_data_format.rs  unknown_data_format.stderr  unknown_transport.rs  unknown_transport.stderr
lucia-macros/tests/ui/pass/: custom_transport.rs  df_builder_with_req_lf.rs
lucia/src/: api.rs  data_format.rs  dnsn.rs  error.rs  lib.rs  macros.rs  misc.rs  network.rs  package.rs  pkg.rs  req_res.rs
lucia/src/data_format/borsh/: borsh_request.rs  borsh_response.rs
lucia/src/data_format/graph_ql/: graph_ql_request.rs  graph_ql_response.rs
lucia/src/data_format/json/: json_request.rs  json_response.rs
lucia/src/data_format/json_rpc/: json_rpc_notification.rs  json_rpc_request.rs  json_rpc_response.rs
lucia/src/data_format/protobuf/: protobuf_request.rs  protobuf_response.rs
lucia/src/data_format/verbatim/: verbatim_request.rs  verbatim_response.rs
lucia/src/data_format/xml/: xml_request.rs  xml_response.rs
lucia/src/data_format/yaml/: yaml_request.rs  yaml_response.rs
lucia/src/data_formats/: json_rpc.rs
lucia/src/data_formats/json/: json_request.rs  json_response.rs
lucia/src/data_formats/json_rpc/: json_rpc_notification.rs  json_rpc_request.rs  json_rpc_response.rs  json_rpc_response_error.rs  processed_json_rpc_response.rs
lucia/src/data_formats/xml/: xml_request.rs  xml_response.rs
lucia/src/dnsn/: borsh.rs  deserialize.rs  miniserde.rs  protobuf.rs  rkyv.rs  serde_json.rs  serde_xml_rs.rs  serde_yaml.rs  serialize.rs  simd_json.rs  tests.rs
lucia/src/misc/: async_trait.rs  buffer.rs  byte_buffer.rs  common_params.rs  debug_display.rs  fn_mut_fut.rs  from_bytes.rs  from_error_ty.rs  generic_time.rs  pair.rs  query_writer.rs  request_counter.rs  request_limit.rs  request_throttling.rs  seq_visitor.rs  url.rs  url_parts.rs
lucia/src/network/: http.rs  tcp.rs  transport.rs  transport_group.rs  udp.rs  ws.rs
lucia/src/network/transport/: bi_transport.rs  mock.rs  reqwest.rs  soketto.rs  std.rs  surf.rs  test.rs  tokio_tungstenite.rs  transport_params.rs  unit.rs  wtx.rs
lucia/src/package/: batch_package.rs  package_with_helper.rs  packages_aux.rs
lucia/src/pkg/: batch_pkg.rs  pkg_with_helper.rs  pkgs_aux.rs
lucia/src/req_res/: request.rs  request_manager.rs  request_params_modifier.rs  request_response.rs  request_with_aux.rs  requests.rs
(+371 files in other folders)
