[dependencies]
arrayvec = { default-features = false, features = ["serde"], version = "0.7" }
async-trait = { default-features = false, version = "0.1" }
cl-aux = { default-features = false, features = ["alloc", "arrayvec", "serde"], version = "1.0" }
serde = { default-features = false, features = ["derive"], version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], version = "1.0" }

###### API ######

# Ethereum

ethabi = { default-features = false, features = ["full-serde"], optional = true, version = "17.0" }
ethereum-types = { default-features = false, features = ["serialize"], optional = true, version = "0.13" }

# KuCoin

hmac = { default-features = false, optional = true, version = "0.12" }
sha2 = { default-features = false, optional = true, version = "0.10" }

# Solana

bincode = { default-features = false, optional = true, version = "1.0" }
bs58 = { default-features = false, features = ["alloc"], optional = true, version = "0.4" }
ed25519-dalek = { default-features = false, features = ["u64_backend"], optional = true, version = "1.0" }
solana-program = { default-features = false, optional = true, version = "1.0" }

###### Etc ######

async-std = { default-features = false, features = ["default"], optional = true, version = "1.0" }
base64 = { default-features = false, features = ["alloc"], optional = true, version = "0.13" }
crypto-common = { default-features = false, optional = true, version = "0.1" }
hex = { default-features = false, optional = true, version = "0.4" }
tokio = { default-features = false, optional = true, version = "1.0" }
tracing = { default-features = false, features = ["attributes"], optional = true, version = "0.1" }

###### Transport implementation ######

# Reqwest

reqwest = { default-features = false, features = ["json"], optional = true, version = "0.11" }

# Surf

surf = { default-features = false, optional = true, version = "2.0" }

# Tokio Tungstenite

futures = { default-features = false, optional = true, version = "0.3" }
tokio-tungstenite = { default-features = false, features = ["connect", "__rustls-tls"], optional = true, version = "0.17" }
tungstenite = { default-features = false, optional = true, version = "0.17" }

[dev-dependencies]
tracing-subscriber = { default-features = false, features = ["env-filter", "fmt", "tracing-log"], version = "0.3" }

[features]

# API

age-of-empires-ii = []
covid-19 = []
ethereum = ["dep:ethabi", "dep:ethereum-types", "dep:hex"]
json-placeholder = []
ku-coin = ["base64", "dep:crypto-common", "dep:hmac", "dep:sha2"]
nager-date = []
solana = ["base64", "dep:bincode", "dep:bs58", "dep:ed25519-dalek"]

# Etc

base64 = ["dep:base64"]
async-std = ["dep:async-std"]
default = []
std = ["arrayvec/std", "cl-aux/std", "serde/std"]
tokio = ["std", "dep:tokio", "tokio?/time"]
tracing = ["dep:tracing"]

_dev = ["async-std?/attributes", "async-std?/default", "surf?/h1-client-rustls", "tokio?/macros", "tokio?/rt-multi-thread"]
_integration-tests = ["_dev", "reqwest?/rustls-tls"]
_surf-hack = ["surf?/h1-client-no-tls"]

# Transport implementation

reqwest = ["dep:reqwest", "std", "tokio"]
surf = ["async-std", "dep:surf"]
tokio-tungstenite = ["dep:futures", "std", "dep:tokio-tungstenite", "dep:tokio", "dep:tungstenite"]

[package]
categories = ["asynchronous", "data-structures", "network-programming"]
description = "A flexible client API framework as well as a set of API collections"
edition = "2021"
keywords = ["api", "client", "io", "network"]
license = "MIT"
name = "lucia"
readme = "README.md"
repository = "https://github.com/c410-f3r/lucia"
rust-version = "1.62"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
