[dependencies]
arrayvec = { default-features = false, version = "0.7" }
async-trait = { default-features = false, version = "0.1" }
cl-aux = { default-features = false, features = ["alloc", "arrayvec"], version = "1.0" }

###### API ######

# Deserializer/Serializer

miniserde = { default-features = false, optional = true, version = "0.1" }
serde = { default-features = false, features = ["alloc", "derive"], optional = true, version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], optional = true, version = "1.0" }
serde-xml-rs = { default-features = false, optional = true, version = "0.5" }

# Ethereum

ethabi = { default-features = false, optional = true, version = "17.0" }
ethereum-types = { default-features = false, optional = true, version = "0.13" }
primitive-types = { default-features = false, optional = true, version = "0.11" }

# KuCoin

hmac = { default-features = false, optional = true, version = "0.12" }
sha2 = { default-features = false, optional = true, version = "0.10" }

# Solana

bincode = { default-features = false, optional = true, version = "1.0" }
ed25519-dalek = { default-features = false, features = ["u64_backend"], optional = true, version = "1.0" }
solana-program = { default-features = false, optional = true, version = "1.0" }

###### Etc ######

async-std = { default-features = false, features = ["default"], optional = true, version = "1.0" }
base64 = { default-features = false, features = ["alloc"], optional = true, version = "0.13" }
bs58 = { default-features = false, features = ["alloc"], optional = true, version = "0.4" }
crypto-common = { default-features = false, optional = true, version = "0.1" }
hex = { default-features = false, optional = true, version = "0.4" }
tokio = { default-features = false, optional = true, version = "1.0" }
tracing = { default-features = false, features = ["attributes"], optional = true, version = "0.1" }

###### Transport implementation ######

# Reqwest

reqwest = { default-features = false, optional = true, version = "0.11" }

# Surf

surf = { default-features = false, optional = true, version = "2.0" }

# Tokio Tungstenite

futures = { default-features = false, optional = true, version = "0.3" }
tokio-tungstenite = { default-features = false, features = ["connect", "__rustls-tls"], optional = true, version = "0.17" }
tungstenite = { default-features = false, optional = true, version = "0.17" }

[dev-dependencies]
tracing-subscriber = { default-features = false, features = ["env-filter", "fmt", "tracing-log"], version = "0.3" }

[features]

# Deserializer/Serializer

miniserde = ["dep:miniserde", "std"]
serde = ["arrayvec/serde", "cl-aux/serde", "ethabi?/full-serde", "dep:serde"]
serde_json = ["serde", "dep:serde_json", "std"]
serde-xml-rs = ["serde", "dep:serde-xml-rs", "std"]

# API

age-of-empires-ii = []
colour-lovers = []
ethereum = ["dep:ethabi", "dep:ethereum-types", "dep:hex", "dep:primitive-types"]
json-placeholder = []
ku-coin = ["base64", "dep:crypto-common", "dep:hmac", "dep:sha2"]
m-media-covid-19 = []
nager-date = []
solana = ["base64", "dep:bincode", "bs58", "dep:ed25519-dalek"]

# Etc

async-std = ["dep:async-std"]
base64 = ["dep:base64"]
bs58 = ["dep:bs58"]
default = []
std = ["arrayvec/std", "cl-aux/std", "miniserde?/std", "serde?/std", "serde_json?/std"]
tokio = ["std", "dep:tokio", "tokio?/time"]
tracing = ["dep:tracing"]

_dev = ["async-std?/attributes", "async-std?/default", "surf?/h1-client-rustls", "tokio?/macros", "tokio?/rt-multi-thread"]
_integration-tests = ["_dev", "reqwest?/rustls-tls"]
_surf-hack = ["surf?/h1-client-no-tls"]

# Transport implementation

reqwest = ["dep:reqwest", "tokio"]
surf = ["async-std", "dep:surf"]
tokio-tungstenite = ["dep:futures", "dep:tokio-tungstenite", "dep:tungstenite", "tokio"]

[package]
categories = ["asynchronous", "data-structures", "network-programming"]
description = "A flexible client API framework as well as a set of API collections"
edition = "2021"
keywords = ["api", "client", "io", "network"]
license = "MIT"
name = "lucia"
readme = "README.md"
repository = "https://github.com/c410-f3r/lucia"
rust-version = "1.62"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true
