[dependencies]
arrayvec = { default-features = false, features = ["serde"], version = "0.7" }
cl-aux = { default-features = false, features = ["alloc", "arrayvec", "serde"], version = "2.0" }
lucia = { default-features = false, features = ["arrayvec"], path = "../lucia", version = "0.5" }
lucia-macros = { default-features = false, path = "../lucia-macros", version = "0.2" }
serde = { default-features = false, features = ["alloc", "derive"], version = "1.0" }

# Solana

bincode = { default-features = false, optional = true, version = "1.0" }
solana-program = { default-features = false, optional = true, version = "1.15" }

# Etc

async-trait = { default-features = false, optional = true, version = "0.1" }
base64 = { default-features = false, features = ["alloc"], optional = true, version = "0.21" }
bs58 = { default-features = false, features = ["alloc"], optional = true, version = "0.4" }
ed25519-dalek = { default-features = false, features = ["u64_backend"], optional = true, version = "1.0" }

[dev-dependencies]
lucia = { default-features = false, features = ["reqwest", "serde_json", "tokio-tungstenite", "tracing"], path = "../lucia" }
lucia-apis = { features = ["async-trait", "ed25519-dalek"], path = "." }
reqwest = { default-features = false, features = ["rustls-tls"], version = "0.11" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.0" }
tokio-tungstenite = { default-features = false, features = ["connect", "rustls-tls-webpki-roots"], version = "0.18" }
tracing-subscriber = { default-features = false, features = ["env-filter", "fmt", "tracing-log"], version = "0.3" }

[features]

# API

json-placeholder = []
nager-date = []
rick-and-morty = []
solana = ["base64", "bincode", "bs58"]

# Etc

async-trait = ["dep:async-trait", "lucia/async-trait", "lucia-macros/async-trait"]
default = []
ed25519-dalek = ["dep:ed25519-dalek", "std"]
std = []
_integration-tests = []

[package]
categories = ["asynchronous", "data-structures", "encoding", "network-programming", "no-std"]
description = "A set of API collections based on the lucia framework"
edition = "2021"
keywords = ["api", "client", "io", "network", "serialization"]
license = "MIT"
name = "lucia-apis"
readme = "README.md"
repository = "https://github.com/c410-f3r/lucia"
rust-version = "1.65"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true
