[dependencies]
arrayvec = { default-features = false, features = ["serde"], version = "0.7" }
cl-aux = { default-features = false, features = ["alloc", "arrayvec", "serde"], version = "4.4" }
lucia = { default-features = false, features = ["arrayvec"], path = "../lucia", version = "0.5" }
lucia-macros = { default-features = false, path = "../lucia-macros", version = "0.2" }
serde = { default-features = false, features = ["alloc", "derive"], version = "1.0" }

# Etc

base64 = { default-features = false, features = ["alloc"], optional = true, version = "0.21" }
bs58 = { default-features = false, features = ["alloc"], optional = true, version = "0.5" }
ed25519-dalek = { default-features = false, features = ["u64_backend"], optional = true, version = "1.0" }

# Ethereum

ethabi = { default-features = false, features = ["full-serde"], optional = true, version = "18.0" }
ethereum-types = { default-features = false, features = ["serialize"], optional = true, version = "0.14" }
hex = { default-features = false, optional = true, version = "0.4" }
primitive-types = { default-features = false, features = ["serde"], optional = true, version = "0.12" }

# Solana

bincode = { default-features = false, optional = true, version = "1.0" }
solana-program = { default-features = false, optional = true, version = "1.17" }

[dev-dependencies]
lucia = { default-features = false, features = ["reqwest", "serde_json", "tracing", "wtx"], path = "../lucia" }
lucia-apis = { features = ["ed25519-dalek"], path = "." }
reqwest = { default-features = false, features = ["rustls-tls"], version = "0.11" }
serde_json = { default-features = false, features = ["alloc"], version = "1.0" }
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.33" }
tracing-subscriber = { default-features = false, features = ["env-filter", "fmt", "tracing-log"], version = "0.3" }
wtx = { default-features = false, features = ["tokio", "web-socket-handshake"], version = "0.10" }

[features]

# API

aptos = []
ethereum = ["ethabi", "ethereum-types", "hex", "primitive-types"]
json-placeholder = []
nager-date = []
rick-and-morty = []
solana = ["base64", "bincode", "bs58"]

# Etc

async-send = ["lucia/async-send", "wtx/async-send"]
default = []
ed25519-dalek = ["dep:ed25519-dalek", "std"]
std = []
_integration-tests = []

[package]
categories = ["asynchronous", "data-structures", "encoding", "network-programming", "no-std"]
description = "A set of API collections based on the lucia framework"
edition = "2021"
keywords = ["api", "client", "io", "network", "serialization"]
license = "MIT"
name = "lucia-apis"
readme = "README.md"
repository = "https://github.com/c410-f3r/lucia"
rust-version = "1.65"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true
