[dependencies]
proc-macro2 = { default-features = false, version = "1.0" }
quote = { default-features = false, features = ["proc-macro"], version = "1.0" }
syn = { default-features = false, features = ["full", "parsing", "printing", "extra-traits", "proc-macro"], version = "1.0" }

[dev-dependencies]
async-trait = { default-features = false, version = "0.1" }
lucia = { default-features = false, features = ["async-trait"], path = "../lucia" }
lucia-macros = { default-features = false, features = ["async-trait"], path = "../lucia-macros" }
trybuild = { default-features = false, version = "1.0" }

[features]
default = ["async-trait"]
async-trait = []

[lib]
proc-macro = true

[package]
categories = ["asynchronous", "data-structures", "network-programming"]
description = "Procedural macros for lucia"
edition = "2021"
keywords = ["api", "client", "io", "network"]
license = "MIT"
name = "lucia-macros"
readme = "README.md"
repository = "https://github.com/c410-f3r/lucia"
rust-version = "1.65"
version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
