[dependencies]
cl-aux = { default-features = false, features = ["alloc"], version = "4.0" }

# Deserializer/Serializer

borsh = { default-features = false, features = ["derive", "std"], optional = true, version = "1.1" }
miniserde = { default-features = false, optional = true, version = "0.1" }
protobuf = { default-features = false, optional = true, version = "3.3" }
rkyv = { default-features = false, features = ["validation"], optional = true, version = "0.7" }
serde = { default-features = false, features = ["alloc", "derive"], optional = true, version = "1.0" }
serde_json = { default-features = false, features = ["alloc"], optional = true, version = "1.0" }
serde_yaml = { default-features = false, optional = true, version = "0.9" }
serde-xml-rs = { default-features = false, optional = true, version = "0.6" }
simd-json = { default-features = false, features = ["serde_impl"], optional = true, version = "0.11" }

# Etc

arrayvec = { default-features = false, optional = true, version = "0.7" }
async-std = { default-features = false, optional = true, version = "1.0" }
lucia-macros = { default-features = false, optional = true, path = "../lucia-macros", version = "0.2" }
tokio = { default-features = false, optional = true, version = "1.34" }
tracing = { default-features = false, optional = true, version = "0.1" }

# Network

reqwest = { default-features = false, optional = true, version = "0.11" }
surf = { default-features = false, optional = true, version = "2.0" }
wtx = { default-features = false, optional = true, version = "0.11" }

[dev-dependencies]
tokio = { default-features = false, features = ["macros", "rt-multi-thread"], version = "1.34" }
tracing-subscriber = { default-features = false, features = ["env-filter", "fmt", "tracing-log"], version = "0.3" }

[features]

# Deserializer/Serializer

borsh = ["dep:borsh", "std"]
miniserde = ["dep:miniserde", "std"]
protobuf = ["dep:protobuf", "std"]
serde = ["arrayvec?/serde", "cl-aux/serde", "dep:serde"]
serde_json = ["serde", "dep:serde_json", "std"]
serde_yaml = ["serde", "dep:serde_yaml", "std"]
serde-xml-rs = ["serde", "dep:serde-xml-rs", "std"]
simd-json = ["serde", "dep:simd-json", "std"]

# Etc

arrayvec = ["dep:arrayvec", "cl-aux/arrayvec"]
async-send = ["wtx/async-send"]
async-std = ["dep:async-std", "async-std?/default"]
default = []
macros = ["dep:lucia-macros"]
std = ["arrayvec?/std", "cl-aux/std", "miniserde?/std", "serde?/std", "serde_json?/std"]
tokio = ["std", "dep:tokio", "tokio?/time"]

# These dependencies do not support `no-default-features` and the explicit "hard-coded" usage of
# any feature would imply a downstream enforcement, which is bad.
_hack = ["surf?/h1-client-no-tls", "rkyv?/size_32", "simd-json?/allow-non-simd"]

[package]
categories = ["asynchronous", "data-structures", "encoding", "network-programming", "no-std"]
description = "A flexible client API framework as well as a set of API collections"
edition = "2021"
keywords = ["api", "client", "io", "network", "serialization"]
license = "MIT"
name = "lucia"
readme = "README.md"
repository = "https://github.com/c410-f3r/lucia"
rust-version = "1.65"
version = "0.5.0"

[package.metadata.docs.rs]
all-features = true
